Fix alignment of close button on f flash messages

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -86,6 +86,14 @@ h1, h2, h3, h4 {
 /* ====================
  FLASH MESSAGE STYLES
 ======================= */
+#flask-flash {
+    display: flex;
+    justify-content: space-between;
+}
+
+.flash-message {
+    margin-right: 0.8em;
+}
 
 .info {
     color:  hsla(160, 36%, 28%, 1);
